# eiffel_10klocs

./: .gitignore  README.md  for_beeminder.md  git_push_for_beeminder.sh
AOPinEiffel/mediator_pattern/: colleague.e
ArchOrientedProgramming/: application.e  archorientedprogramming.ecf
DBCByExamplePag36v2/: application.e  dbcbyexamplepag36v2.ecf  simple_stack.e
DBCbyExamplePag36/: application.e  dbcbyexamplepag36.ecf  simple_stack.e
DBCbyExample_28/: application.e  dbcbyexample_28.ecf  simple_stack.e
SET_THEORY/: application.e  set_theory.ecf  sts_set.e
componization_patterns/Pag49/: book.e
eformmail-2.0/: ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
eformmail-2.0/doc/: Makefile.am  Makefile.in  eformmail.html  example_form.html
eformmail-2.0/etc/: Makefile.am  Makefile.in  key.conf  main.conf
eformmail-2.0/src/: Makefile.am  Makefile.in  build.eant  form_mail.e  key_configuration.e  main_configuration.e  system.xace
et_inheritance/: eiffel_tutorial.ecf
ex_attributes/: application.e  ex_attributes.ecf  person.e
ex_cli/: application.e  ex_cli.ecf
ex_environment_variables/: application.e  ex_environment_variables.ecf
ex_fileIO/: application.e  ex_fileio.ecf
ex_reverse/: application.e  ex_reverse.ecf
ex_sieve/: application.e  ex_sieve.ecf
ex_sleep/: application.e  ex_sleep.ecf
libertyEiffel_piramyd/: application.e  libertyeiffel_piramyd.ecf
libertyEiffel_xml/: application.e  example2.e  libertyeiffel_xml.ecf  my_validating_tree.e
literate_polymophic_identfiers/: index.html
(+25 files in other folders)
